Fix infobar and dialog positioning on iOS

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -84,8 +84,8 @@ iframe {
 
 .infobar {
   position: fixed;
-  inset-block-end: 10px;
-  inset-inline-end: 10px;
+  inset-block-end: calc(10px + env(safe-area-inset-bottom));
+  inset-inline-end: calc(10px + env(safe-area-inset-right));
   block-size: 40px;
   max-inline-size: calc(100% - 20px);
   display: flex;
@@ -280,7 +280,7 @@ iframe {
   min-inline-size: 350px;
   max-inline-size: 400px;
   max-block-size: 60%;
-  inset-inline-end: 10px;
+  inset-inline-end: calc(10px + env(safe-area-inset-right));
   overflow-y: auto;
   overflow-x: hidden;
   word-wrap: break-word;
@@ -563,6 +563,9 @@ iframe {
     inset-block-end: calc(80px + env(safe-area-inset-bottom));
     border-end-start-radius: 0;
     border-end-end-radius: 0;
+    padding: var(--padding-lg)
+      calc(var(--padding-lg) + env(safe-area-inset-right)) var(--padding-lg)
+      calc(var(--padding-lg) + env(safe-area-inset-left));
   }
 
   .tooltip {
